--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
     <dependencies>
         <!--Project Dependencies-->
         <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.10</version>
+        </dependency>
+
+        <!--Compile Dependencies-->
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>${spring.version}</version>
@@ -77,7 +84,6 @@
             <scope>compile</scope>
         </dependency>
 
-        <!--Compile Dependencies-->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
