--- a/pom.xml
+++ b/pom.xml
@@ -50,9 +50,9 @@
     <dependencies>
         <!--Project Dependencies-->
         <dependency>
-            <groupId>com.thoughtworks.xstream</groupId>
-            <artifactId>xstream</artifactId>
-            <version>1.4.10</version>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
         </dependency>
 
         <!--Compile Dependencies-->
