--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,18 @@
             <version>2.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>tech.rsqn.reflection-helpers</groupId>
+            <artifactId>reflection-helpers</artifactId>
+            <version>1.0.1-SNAPSHOT</version>
+        </dependency>
+
         <!--Compile Dependencies-->
         <dependency>
             <groupId>org.springframework</groupId>
