--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,6 +36,9 @@
     "postCreateCommand": "chmod +x .devcontainer/post-create.sh dev_helpers.sh && ./.devcontainer/post-create.sh",
     "remoteUser": "root",
     "containerUser": "root",
+    "mounts": [
+        "source=vscode-maven-m2,target=/root/.m2,type=volume"
+    ],
     "workspaceFolder": "/workspace",
     "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached",
     "shutdownAction": "stopContainer"
